# mowen-plugin

./: .eslintrc.cjs  .gitignore  AGENTS.md  PRIVACY.md  Popup_FourCards_Spec_ManualPreview.md  README.md  manifest.json  mdImport.html  notesExport.html  options.html  package.json  pdfPreview.html  plan.md  popup.html  reproduce_layout.ts  sidepanel.html  tailwind.config.js  vite.config.ts
asr-proxy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
asr-proxy/docs/: semantic_segmentation_guide.md  semantic_segmentation_implementation.md
asr-proxy/src/asr_proxy/: __init__.py  audio_transcoder.py  config.py  doubao_corrector.py  hotwords.py  llm_corrector.py  main.py  mock_transcriber.py  models.py  result_adapter.py  semantic_segmenter.py  session_manager.py  tencent_client.py  volcengine_client.py  ws_server.py
asr-proxy/tests/: test_config.py  test_doubao_corrector.py  test_result_adapter.py  test_semantic_segmenter.py  test_validate_correction.py
docs/: Agent_Teams_设计方案_ASR准确率提升.md  CLAUDE.md  PRD_Mowen_Note_Assistant_v0_3.md  PRD_墨问笔记助手_AI语音笔记_Typeless风格_v1.0.md  PRD_对接火山引擎流式ASR_从Mock到真实链路_v1.0.md  PRIVACY_POLICY.md  background-save-flow-validation.md  note_export_pdf_prd.docx  review-findings-zh.html  store_description.md
mcp-server/: README.md  claude_desktop_config.example.json  package.json
public/: offscreen.html  offscreen.js  pageContextHelper.js
scripts/: generate-icons.js  verify-weixin-regressions.mjs
tests/: markdown-import-save.test.ts  markdown-import.test.ts  (+1 more)
(+110 files in other folders)
